[gd_scene load_steps=2 format=3 uid="uid://jfp57twqgva3"]

[ext_resource type="Script" path="res://addons/dialogic/Converter/Converter.gd" id="1_wedla"]

[node name="Converter" type="Node2D"]
script = ExtResource("1_wedla")

[node name="Panel" type="Panel" parent="."]
offset_right = 1029.0
offset_bottom = 621.0

[node name="Instructions" type="Label" parent="Panel"]
offset_left = 20.0
offset_top = -1.0
offset_right = 622.0
offset_bottom = 77.0
text = "This is a converter script to convert Dialogic 1.4+ files into Dialogic 2.0 format. This converter is meant to run directly as the scene."

[node name="OutputLog" type="RichTextLabel" parent="Panel"]
offset_left = 68.0
offset_top = 22.0
offset_right = 990.0
offset_bottom = 551.0
bbcode_enabled = true
scroll_following = true

[node name="Begin" type="Button" parent="Panel"]
offset_left = 873.0
offset_top = 559.0
offset_right = 1016.0
offset_bottom = 590.0
disabled = true
text = "Begin Conversion"

[node name="OutputPath" type="Label" parent="Panel"]
offset_left = 13.0
offset_top = 571.0
offset_right = 113.0
offset_bottom = 597.0
text = "Output path: "

[connection signal="pressed" from="Panel/Begin" to="." method="_on_begin_pressed"]
